fix some prblms ,edit page...

--- a/src/app/edit-etudiant/edit-etudiant.component.html
+++ b/src/app/edit-etudiant/edit-etudiant.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-center">AJOUTER ETUDIANT !</h2>
+<h2 class="text-center">Modifier ETUDIANT !</h2>
 <form>
     <div class="form-group">
     <label for="name">Name:</label>
@@ -15,6 +15,5 @@
     <input [(ngModel)]="user.empId" placeholder="Etudiant Id" name="Etudiant Id" class="form-control" id="employeeid">
     </div>
 
-    <button class="btn btn-success" (click)="createEtudiant()">Create</button>    
+    <button class="btn btn-success" (click)="editEtudiant()">Modifier</button>    
 </form>
-            
