--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div>
       User Name : <input type="text" name="username" [(ngModel)]="username">
       Password : <input type="password" name="password" [(ngModel)]="password">
@@ -6,4 +6,43 @@
     <button (click)=checkLogin() class="btn btn-success">
       Login
     </button>
-  </div>
+  </div> -->
+
+
+  <div class="limiter">
+		<div class="container-login100">
+			<div class="wrap-login100">
+				<div class="login100-pic js-tilt" data-tilt>
+					<img src="https://colorlib.com/etc/lf/Login_v1/images/img-01.png" alt="IMG">
+				</div>
+
+				<form class="login100-form validate-form">
+					<span class="login100-form-title">
+						Admin Login
+					</span>
+
+					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+						<input class="input100" type="text" id="email" name="email" placeholder="Email" [(ngModel)]="username">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div class="wrap-input100 validate-input" data-validate = "Password is required">
+						<input class="input100" type="password"  id="pass" name="pass" placeholder="Password" [(ngModel)]="password">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div class="container-login100-form-btn">
+						<button class="login100-form-btn" (click)=checkLogin()>
+							Login
+						</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
