--- a/src/app/etudiants/etudiants.component.html
+++ b/src/app/etudiants/etudiants.component.html
@@ -2,50 +2,27 @@
 <table class="table table-striped">
     <thead></thead>
     <tr>
-    <th>id</th>
-    <th>name</th>
-    <th>mail</th>
-    <th>phone number</th>
-    <th>num of courses</th>
-    <th>prix(dh)</th>
+    <th>Id</th>
+    <th>CIN</th>
+    <th>Nom</th>
+    <th>Prenom</th>
+    <th>Num</th>
+    <th>Email</th>
+    <th>Password</th>
+    <th></th>
+    <th></th>
     </tr>
     <tbody>
         <tr *ngFor="let etudiant of etudiants">
-            <td>{{etudiant.name}}</td>
-            <td>{{etudiant.designation}}</td>
-            <td><button class="btn btn-danger" (click)="deleteEtudiant(etudiant)"> Delete Etudiant</button></td>
-        </tr>
-
-        <tr >
-            <td>5</td>
-            <td>mohamed abdellaoui</td>
-            <td>medabde@gmail.com</td>
-            <td>0610507087</td>
-            <td>1</td>
-            <td>750</td>
-            <td><a routerLink="/editetudiant" class="btn btn-success">Edit</a></td>
-            <td><button class="btn btn-danger" (click)="deleteEtudiant(etudiant)">Delete</button></td>
-        </tr>
-
-        <tr >
-            <td>1</td>
-            <td>3wita abdellaoui</td>
-            <td>brhm@gmail.com</td>
-            <td>061054457</td>
-            <td>2</td>
-            <td>900</td>
-            <td><button class="btn btn-success">Edit</button></td>
-            <td><button class="btn btn-danger">Delete</button></td>
-        </tr>
-        <tr >
-            <td>2</td>
-            <td>brhn ladla</td>
-            <td>chi mail@gmail.com</td>
-            <td>06105077</td>
-            <td>5</td>
-            <td>1500</td>
-            <td><button class="btn btn-success">Edit</button></td>
-            <td><button class="btn btn-danger">Delete</button></td>
+            <td>{{etudiant.id}}</td>
+            <td>{{etudiant.cin}}</td>
+            <td>{{etudiant.nom}}</td>
+            <td>{{etudiant.prenom}}</td>
+            <td>{{etudiant.num}}</td>
+            <td>{{etudiant.email}}</td>
+            <td>{{etudiant.passwd}}</td>
+            <td><button class="btn btn-success" (click)="editEtudiant(etudiant)">Edit</button></td>
+            <td><button class="btn btn-danger" (click)="supetudiant(etudiant)">Delete</button></td>
         </tr>
     </tbody>
 </table>
